--- a/pickle/testing_pickles.ipynb
+++ b/pickle/testing_pickles.ipynb
@@ -426,9 +426,51 @@
     "home_num = df2[df2['team'] == h]['team#'].values[0]\n",
     "away_num = df2[df2['opposingTeam'] == a]['opposingTeam#'].values[0]\n",
     "print('Home Team Name:', h)\n",
-    "print('Home Tean Number:', home_num)\n",
+    "print('Home Team Number:', home_num)\n",
     "print('Away Team Name:', a)\n",
-    "print('Away Tean Number', away_num)"
+    "print('Away Team Number', away_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The predicted class: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Making predictions\n",
+    "pred = model.predict([[home_num, away_num,5,5,5,5,5,5]]) \n",
+    "print('The predicted class:', pred[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.10984184 0.89015816]]\n",
+      "0.1098418445846625\n",
+      "[0.10984184 0.89015816]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob = model.predict_proba([[home_num, away_num,5,5,5,5,5,5]])\n",
+    "# class 0 probability\n",
+    "print(prob)\n",
+    "print(prob[0][0])\n",
+    "print(prob[0])"
    ]
   }
  ],
