--- a/pickle/testing_pickles.ipynb
+++ b/pickle/testing_pickles.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -415,9 +415,9 @@
      "output_type": "stream",
      "text": [
       "Home Team Name: WPG\n",
-      "Home Tean Number: 30\n",
+      "Home Team Number: 30\n",
       "Away Team Name: EDM\n",
-      "Away Tean Number 11\n"
+      "Away Team Number 11\n"
      ]
     }
    ],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
      "output_type": "stream",
      "text": [
       "[[0.10984184 0.89015816]]\n",
-      "0.8901581554153375\n",
+      "Prob: 89.02%\n",
       "[0.10984184 0.89015816]\n"
      ]
     }
@@ -469,7 +469,7 @@
     "prob = model.predict_proba([[home_num, away_num,5,5,5,5,5,5]])\n",
     "# class 0 probability\n",
     "print(prob)\n",
-    "print(prob[0][1])\n",
+    "print(f\"Prob: {round((prob[0][1]) * 100, 2)}%\")\n",
     "print(prob[0])"
    ]
   }
