--- a/pickle/testing_pickles.ipynb
+++ b/pickle/testing_pickles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -44,8 +44,6 @@
        "      <th>team#</th>\n",
        "      <th>opposingTeam</th>\n",
        "      <th>opposingTeam#</th>\n",
-       "      <th>home_or_away</th>\n",
-       "      <th>home_or_away#</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -53,100 +51,78 @@
        "      <td>0</td>\n",
        "      <td>ANA</td>\n",
        "      <td>0</td>\n",
-       "      <td>ARI</td>\n",
-       "      <td>1</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>VGK</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>ARI</td>\n",
        "      <td>1</td>\n",
-       "      <td>ANA</td>\n",
-       "      <td>0</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>SJS</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>BOS</td>\n",
        "      <td>2</td>\n",
-       "      <td>DAL</td>\n",
-       "      <td>9</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NJD</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>BUF</td>\n",
        "      <td>3</td>\n",
-       "      <td>PIT</td>\n",
-       "      <td>22</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>WSH</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>CAR</td>\n",
        "      <td>4</td>\n",
-       "      <td>WSH</td>\n",
-       "      <td>31</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
        "      <td>CBJ</td>\n",
        "      <td>5</td>\n",
-       "      <td>TOR</td>\n",
-       "      <td>27</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>NSH</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
        "      <td>CGY</td>\n",
        "      <td>6</td>\n",
-       "      <td>COL</td>\n",
-       "      <td>8</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>WPG</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
        "      <td>CHI</td>\n",
        "      <td>7</td>\n",
-       "      <td>PHI</td>\n",
-       "      <td>21</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>TBL</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
        "      <td>COL</td>\n",
        "      <td>8</td>\n",
-       "      <td>CGY</td>\n",
-       "      <td>6</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>STL</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
        "      <td>DAL</td>\n",
        "      <td>9</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>2</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>NSH</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
        "      <td>DET</td>\n",
        "      <td>10</td>\n",
-       "      <td>NSH</td>\n",
-       "      <td>17</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>CAR</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>11</td>\n",
@@ -154,17 +130,13 @@
        "      <td>11</td>\n",
        "      <td>VAN</td>\n",
        "      <td>28</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>12</td>\n",
        "      <td>FLA</td>\n",
        "      <td>12</td>\n",
-       "      <td>TBL</td>\n",
-       "      <td>26</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>13</td>\n",
@@ -172,62 +144,48 @@
        "      <td>13</td>\n",
        "      <td>VGK</td>\n",
        "      <td>29</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>14</td>\n",
        "      <td>MIN</td>\n",
        "      <td>14</td>\n",
-       "      <td>NSH</td>\n",
-       "      <td>17</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>LAK</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>15</td>\n",
        "      <td>MTL</td>\n",
        "      <td>15</td>\n",
-       "      <td>BUF</td>\n",
-       "      <td>3</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>TOR</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>16</td>\n",
        "      <td>NJD</td>\n",
        "      <td>16</td>\n",
-       "      <td>BUF</td>\n",
-       "      <td>3</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>17</td>\n",
        "      <td>NSH</td>\n",
        "      <td>17</td>\n",
-       "      <td>MIN</td>\n",
-       "      <td>14</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>CBJ</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>18</td>\n",
        "      <td>NYI</td>\n",
        "      <td>18</td>\n",
-       "      <td>WSH</td>\n",
-       "      <td>31</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>NYR</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>19</td>\n",
        "      <td>NYR</td>\n",
        "      <td>19</td>\n",
-       "      <td>WPG</td>\n",
-       "      <td>30</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>NYI</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>20</td>\n",
@@ -235,26 +193,20 @@
        "      <td>20</td>\n",
        "      <td>TOR</td>\n",
        "      <td>27</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>21</td>\n",
        "      <td>PHI</td>\n",
        "      <td>21</td>\n",
-       "      <td>CHI</td>\n",
-       "      <td>7</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>22</td>\n",
        "      <td>PIT</td>\n",
        "      <td>22</td>\n",
-       "      <td>BUF</td>\n",
-       "      <td>3</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>23</td>\n",
@@ -262,8 +214,6 @@
        "      <td>23</td>\n",
        "      <td>VGK</td>\n",
        "      <td>29</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>24</td>\n",
@@ -271,35 +221,27 @@
        "      <td>24</td>\n",
        "      <td>WPG</td>\n",
        "      <td>30</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>25</td>\n",
        "      <td>STL</td>\n",
        "      <td>25</td>\n",
-       "      <td>WSH</td>\n",
-       "      <td>31</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>COL</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>26</td>\n",
        "      <td>TBL</td>\n",
        "      <td>26</td>\n",
-       "      <td>FLA</td>\n",
-       "      <td>12</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>27</td>\n",
        "      <td>TOR</td>\n",
        "      <td>27</td>\n",
-       "      <td>OTT</td>\n",
-       "      <td>20</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>MTL</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>28</td>\n",
@@ -307,77 +249,69 @@
        "      <td>28</td>\n",
        "      <td>EDM</td>\n",
        "      <td>11</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>29</td>\n",
        "      <td>VGK</td>\n",
        "      <td>29</td>\n",
-       "      <td>SJS</td>\n",
-       "      <td>24</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>1</td>\n",
+       "      <td>ANA</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>30</td>\n",
        "      <td>WPG</td>\n",
        "      <td>30</td>\n",
-       "      <td>NYR</td>\n",
-       "      <td>19</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>CGY</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>31</td>\n",
        "      <td>WSH</td>\n",
        "      <td>31</td>\n",
-       "      <td>STL</td>\n",
-       "      <td>25</td>\n",
-       "      <td>AWAY</td>\n",
-       "      <td>0</td>\n",
+       "      <td>BUF</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   team  team# opposingTeam  opposingTeam# home_or_away  home_or_away#\n",
-       "0   ANA      0          ARI              1         HOME              1\n",
-       "1   ARI      1          ANA              0         AWAY              0\n",
-       "2   BOS      2          DAL              9         AWAY              0\n",
-       "3   BUF      3          PIT             22         AWAY              0\n",
-       "4   CAR      4          WSH             31         AWAY              0\n",
-       "5   CBJ      5          TOR             27         HOME              1\n",
-       "6   CGY      6          COL              8         AWAY              0\n",
-       "7   CHI      7          PHI             21         AWAY              0\n",
-       "8   COL      8          CGY              6         HOME              1\n",
-       "9   DAL      9          BOS              2         HOME              1\n",
-       "10  DET     10          NSH             17         AWAY              0\n",
-       "11  EDM     11          VAN             28         HOME              1\n",
-       "12  FLA     12          TBL             26         AWAY              0\n",
-       "13  LAK     13          VGK             29         HOME              1\n",
-       "14  MIN     14          NSH             17         AWAY              0\n",
-       "15  MTL     15          BUF              3         AWAY              0\n",
-       "16  NJD     16          BUF              3         AWAY              0\n",
-       "17  NSH     17          MIN             14         HOME              1\n",
-       "18  NYI     18          WSH             31         HOME              1\n",
-       "19  NYR     19          WPG             30         HOME              1\n",
-       "20  OTT     20          TOR             27         AWAY              0\n",
-       "21  PHI     21          CHI              7         HOME              1\n",
-       "22  PIT     22          BUF              3         HOME              1\n",
-       "23  SEA     23          VGK             29         AWAY              0\n",
-       "24  SJS     24          WPG             30         HOME              1\n",
-       "25  STL     25          WSH             31         HOME              1\n",
-       "26  TBL     26          FLA             12         HOME              1\n",
-       "27  TOR     27          OTT             20         HOME              1\n",
-       "28  VAN     28          EDM             11         AWAY              0\n",
-       "29  VGK     29          SJS             24         HOME              1\n",
-       "30  WPG     30          NYR             19         AWAY              0\n",
-       "31  WSH     31          STL             25         AWAY              0"
+       "   team  team# opposingTeam  opposingTeam#\n",
+       "0   ANA      0          VGK             29\n",
+       "1   ARI      1          SJS             24\n",
+       "2   BOS      2          NJD             16\n",
+       "3   BUF      3          WSH             31\n",
+       "4   CAR      4          DET             10\n",
+       "5   CBJ      5          NSH             17\n",
+       "6   CGY      6          WPG             30\n",
+       "7   CHI      7          TBL             26\n",
+       "8   COL      8          STL             25\n",
+       "9   DAL      9          NSH             17\n",
+       "10  DET     10          CAR              4\n",
+       "11  EDM     11          VAN             28\n",
+       "12  FLA     12          CHI              7\n",
+       "13  LAK     13          VGK             29\n",
+       "14  MIN     14          LAK             13\n",
+       "15  MTL     15          TOR             27\n",
+       "16  NJD     16          BOS              2\n",
+       "17  NSH     17          CBJ              5\n",
+       "18  NYI     18          NYR             19\n",
+       "19  NYR     19          NYI             18\n",
+       "20  OTT     20          TOR             27\n",
+       "21  PHI     21          PIT             22\n",
+       "22  PIT     22          PHI             21\n",
+       "23  SEA     23          VGK             29\n",
+       "24  SJS     24          WPG             30\n",
+       "25  STL     25          COL              8\n",
+       "26  TBL     26          CHI              7\n",
+       "27  TOR     27          MTL             15\n",
+       "28  VAN     28          EDM             11\n",
+       "29  VGK     29          ANA              0\n",
+       "30  WPG     30          CGY              6\n",
+       "31  WSH     31          BUF              3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -433,40 +367,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The predicted class: 1\n"
+      "The predicted class: 0\n"
      ]
     }
    ],
    "source": [
     "# Making predictions\n",
-    "pred = model.predict([[home_num, away_num,5,5,5,5,5,5]]) \n",
+    "pred = model.predict([[home_num, away_num,0,2022,10,10,5,5]]) \n",
     "print('The predicted class:', pred[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.10984184 0.89015816]]\n",
-      "Prob: 89.02%\n",
-      "[0.10984184 0.89015816]\n"
+      "[[0.52343427 0.47656573]]\n",
+      "Prob: 47.66%\n",
+      "[0.52343427 0.47656573]\n"
      ]
     }
    ],
    "source": [
-    "prob = model.predict_proba([[home_num, away_num,5,5,5,5,5,5]])\n",
+    "prob = model.predict_proba([[home_num, away_num,0,2022,10,10,5,5]])\n",
     "# class 0 probability\n",
     "print(prob)\n",
     "print(f\"Prob: {round((prob[0][1]) * 100, 2)}%\")\n",
