--- a/model/team_metrics_testing.ipynb
+++ b/model/team_metrics_testing.ipynb
@@ -16,7 +16,7 @@
     "# Settings to allow all columns in dataframe to display\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# test\n",
+    "# test2\n",
     "desired_width = 320\n",
     "pd.set_option('display.width', desired_width)\n",
     "np.set_printoptions(linewidth=desired_width)\n",
