--- a/model/new_dataframe.ipynb
+++ b/model/new_dataframe.ipynb
@@ -6181,7 +6181,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# comment"
+   ]
   },
   {
    "cell_type": "markdown",
