--- a/model/new_dataframe.ipynb
+++ b/model/new_dataframe.ipynb
@@ -5681,7 +5681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -5705,12 +5705,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>gameId</th>\n",
        "      <th>season_x</th>\n",
        "      <th>team_x</th>\n",
        "      <th>opposingTeam_x</th>\n",
        "      <th>Win_x</th>\n",
-       "      <th>Loss_x</th>\n",
        "      <th>home_or_away_x</th>\n",
        "      <th>flurryAdjustedxGoalsFor_x</th>\n",
        "      <th>scoreVenueAdjustedxGoalsFor_x</th>\n",
@@ -5735,12 +5733,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>2020020008</td>\n",
        "      <td>2020</td>\n",
        "      <td>NYR</td>\n",
        "      <td>NYI</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>HOME</td>\n",
        "      <td>1.446</td>\n",
        "      <td>1.336</td>\n",
@@ -5763,12 +5759,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2020020024</td>\n",
        "      <td>2020</td>\n",
        "      <td>NYR</td>\n",
        "      <td>NYI</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>HOME</td>\n",
        "      <td>2.986</td>\n",
        "      <td>3.057</td>\n",
@@ -5791,12 +5785,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2020020046</td>\n",
        "      <td>2020</td>\n",
        "      <td>NYR</td>\n",
        "      <td>NJD</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>HOME</td>\n",
        "      <td>3.772</td>\n",
        "      <td>3.733</td>\n",
@@ -5819,11 +5811,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>2020020125</td>\n",
        "      <td>2020</td>\n",
        "      <td>NYR</td>\n",
        "      <td>PIT</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>HOME</td>\n",
        "      <td>3.121</td>\n",
@@ -5847,12 +5837,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>2020020144</td>\n",
        "      <td>2020</td>\n",
        "      <td>NYR</td>\n",
        "      <td>PIT</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>HOME</td>\n",
        "      <td>2.582</td>\n",
        "      <td>2.561</td>\n",
@@ -5878,29 +5866,29 @@
        "</div>"
       ],
       "text/plain": [
-       "       gameId  season_x team_x opposingTeam_x  Win_x  Loss_x home_or_away_x  flurryAdjustedxGoalsFor_x  scoreVenueAdjustedxGoalsFor_x  flurryScoreVenueAdjustedxGoalsFor_x  flurryAdjustedxGoalsFor_y  scoreVenueAdjustedxGoalsFor_y  flurryScoreVenueAdjustedxGoalsFor_y  faceOffsWonFor_x  hitsFor_x  takeawaysFor_x  \\\n",
-       "0  2020020008      2020    NYR            NYI      0       1           HOME                      1.446                          1.336                                1.315                      4.234                          4.699                                4.548              21.0       24.0             7.0   \n",
-       "1  2020020024      2020    NYR            NYI      1       0           HOME                      2.986                          3.057                                3.020                      1.852                          2.012                                1.841              25.0       22.0            13.0   \n",
-       "2  2020020046      2020    NYR            NJD      0       1           HOME                      3.772                          3.733                                3.575                      2.427                          2.641                                2.618              28.0       25.0             6.0   \n",
-       "3  2020020125      2020    NYR            PIT      0       0           HOME                      3.121                          3.144                                3.057                      2.919                          3.172                                3.035              23.0       25.0             6.0   \n",
-       "4  2020020144      2020    NYR            PIT      1       0           HOME                      2.582                          2.561                                2.522                      1.990                          2.191                                2.138              14.0       26.0             7.0   \n",
+       "   season_x team_x opposingTeam_x  Win_x home_or_away_x  flurryAdjustedxGoalsFor_x  scoreVenueAdjustedxGoalsFor_x  flurryScoreVenueAdjustedxGoalsFor_x  flurryAdjustedxGoalsFor_y  scoreVenueAdjustedxGoalsFor_y  flurryScoreVenueAdjustedxGoalsFor_y  faceOffsWonFor_x  hitsFor_x  takeawaysFor_x  giveawaysFor_x  \\\n",
+       "0      2020    NYR            NYI      0           HOME                      1.446                          1.336                                1.315                      4.234                          4.699                                4.548              21.0       24.0             7.0             5.0   \n",
+       "1      2020    NYR            NYI      1           HOME                      2.986                          3.057                                3.020                      1.852                          2.012                                1.841              25.0       22.0            13.0            15.0   \n",
+       "2      2020    NYR            NJD      0           HOME                      3.772                          3.733                                3.575                      2.427                          2.641                                2.618              28.0       25.0             6.0            19.0   \n",
+       "3      2020    NYR            PIT      0           HOME                      3.121                          3.144                                3.057                      2.919                          3.172                                3.035              23.0       25.0             6.0            19.0   \n",
+       "4      2020    NYR            PIT      1           HOME                      2.582                          2.561                                2.522                      1.990                          2.191                                2.138              14.0       26.0             7.0             8.0   \n",
        "\n",
-       "   giveawaysFor_x  faceOffsWonFor_y  hitsFor_y  takeawaysFor_y  giveawaysFor_y  penaltiesFor_x  penalityMinutesFor_x  penaltiesFor_y  penalityMinutesFor_y  \n",
-       "0             5.0              30.0       25.0             6.0             6.0             8.0                  16.0             5.0                  10.0  \n",
-       "1            15.0              31.0       31.0             8.0             9.0             4.0                   8.0             8.0                  16.0  \n",
-       "2            19.0              29.0       21.0             7.0            10.0             2.0                   4.0             5.0                  10.0  \n",
-       "3            19.0              31.0       22.0             4.0            11.0             4.0                   8.0             5.0                  10.0  \n",
-       "4             8.0              34.0       25.0             5.0             8.0             7.0                  17.0             5.0                  13.0  "
+       "   faceOffsWonFor_y  hitsFor_y  takeawaysFor_y  giveawaysFor_y  penaltiesFor_x  penalityMinutesFor_x  penaltiesFor_y  penalityMinutesFor_y  \n",
+       "0              30.0       25.0             6.0             6.0             8.0                  16.0             5.0                  10.0  \n",
+       "1              31.0       31.0             8.0             9.0             4.0                   8.0             8.0                  16.0  \n",
+       "2              29.0       21.0             7.0            10.0             2.0                   4.0             5.0                  10.0  \n",
+       "3              31.0       22.0             4.0            11.0             4.0                   8.0             5.0                  10.0  \n",
+       "4              34.0       25.0             5.0             8.0             7.0                  17.0             5.0                  13.0  "
       ]
      },
-     "execution_count": 229,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joined_df = master[['gameId', 'season_x', 'team_x', 'opposingTeam_x', \n",
-    "                 'Win_x', 'Loss_x', 'home_or_away_x', \n",
+    "joined_df = master[['season_x', 'team_x', 'opposingTeam_x', \n",
+    "                 'Win_x', 'home_or_away_x', \n",
     "                # 'corsiPercentage_x','fenwickPercentage_x',\n",
     "                # 'corsiPercentage_y','fenwickPercentage_y',\n",
     "                 'flurryAdjustedxGoalsFor_x', 'scoreVenueAdjustedxGoalsFor_x', 'flurryScoreVenueAdjustedxGoalsFor_x',\n",
@@ -5916,7 +5904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -5955,7 +5943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -5979,12 +5967,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>gameId</th>\n",
        "      <th>season_x</th>\n",
        "      <th>team_x</th>\n",
        "      <th>opposingTeam_x</th>\n",
        "      <th>Win_x</th>\n",
-       "      <th>Loss_x</th>\n",
        "      <th>home_or_away_x</th>\n",
        "      <th>flurryAdjustedxGoalsFor_x</th>\n",
        "      <th>scoreVenueAdjustedxGoalsFor_x</th>\n",
@@ -6009,12 +5995,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>2020020008</td>\n",
        "      <td>2020</td>\n",
        "      <td>19</td>\n",
        "      <td>18</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1.446</td>\n",
        "      <td>1.336</td>\n",
@@ -6037,12 +6021,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2020020024</td>\n",
        "      <td>2020</td>\n",
        "      <td>19</td>\n",
        "      <td>18</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2.986</td>\n",
        "      <td>3.057</td>\n",
@@ -6065,12 +6047,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2020020046</td>\n",
        "      <td>2020</td>\n",
        "      <td>19</td>\n",
        "      <td>16</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>3.772</td>\n",
        "      <td>3.733</td>\n",
@@ -6093,11 +6073,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>2020020125</td>\n",
        "      <td>2020</td>\n",
        "      <td>19</td>\n",
        "      <td>22</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>3.121</td>\n",
@@ -6121,12 +6099,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>2020020144</td>\n",
        "      <td>2020</td>\n",
        "      <td>19</td>\n",
        "      <td>22</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2.582</td>\n",
        "      <td>2.561</td>\n",
@@ -6152,22 +6128,22 @@
        "</div>"
       ],
       "text/plain": [
-       "       gameId  season_x  team_x  opposingTeam_x  Win_x  Loss_x  home_or_away_x  flurryAdjustedxGoalsFor_x  scoreVenueAdjustedxGoalsFor_x  flurryScoreVenueAdjustedxGoalsFor_x  flurryAdjustedxGoalsFor_y  scoreVenueAdjustedxGoalsFor_y  flurryScoreVenueAdjustedxGoalsFor_y  faceOffsWonFor_x  hitsFor_x  takeawaysFor_x  \\\n",
-       "0  2020020008      2020      19              18      0       1               0                      1.446                          1.336                                1.315                      4.234                          4.699                                4.548              21.0       24.0             7.0   \n",
-       "1  2020020024      2020      19              18      1       0               0                      2.986                          3.057                                3.020                      1.852                          2.012                                1.841              25.0       22.0            13.0   \n",
-       "2  2020020046      2020      19              16      0       1               0                      3.772                          3.733                                3.575                      2.427                          2.641                                2.618              28.0       25.0             6.0   \n",
-       "3  2020020125      2020      19              22      0       0               0                      3.121                          3.144                                3.057                      2.919                          3.172                                3.035              23.0       25.0             6.0   \n",
-       "4  2020020144      2020      19              22      1       0               0                      2.582                          2.561                                2.522                      1.990                          2.191                                2.138              14.0       26.0             7.0   \n",
+       "   season_x  team_x  opposingTeam_x  Win_x  home_or_away_x  flurryAdjustedxGoalsFor_x  scoreVenueAdjustedxGoalsFor_x  flurryScoreVenueAdjustedxGoalsFor_x  flurryAdjustedxGoalsFor_y  scoreVenueAdjustedxGoalsFor_y  flurryScoreVenueAdjustedxGoalsFor_y  faceOffsWonFor_x  hitsFor_x  takeawaysFor_x  giveawaysFor_x  \\\n",
+       "0      2020      19              18      0               0                      1.446                          1.336                                1.315                      4.234                          4.699                                4.548              21.0       24.0             7.0             5.0   \n",
+       "1      2020      19              18      1               0                      2.986                          3.057                                3.020                      1.852                          2.012                                1.841              25.0       22.0            13.0            15.0   \n",
+       "2      2020      19              16      0               0                      3.772                          3.733                                3.575                      2.427                          2.641                                2.618              28.0       25.0             6.0            19.0   \n",
+       "3      2020      19              22      0               0                      3.121                          3.144                                3.057                      2.919                          3.172                                3.035              23.0       25.0             6.0            19.0   \n",
+       "4      2020      19              22      1               0                      2.582                          2.561                                2.522                      1.990                          2.191                                2.138              14.0       26.0             7.0             8.0   \n",
        "\n",
-       "   giveawaysFor_x  faceOffsWonFor_y  hitsFor_y  takeawaysFor_y  giveawaysFor_y  penaltiesFor_x  penalityMinutesFor_x  penaltiesFor_y  penalityMinutesFor_y  \n",
-       "0             5.0              30.0       25.0             6.0             6.0             8.0                  16.0             5.0                  10.0  \n",
-       "1            15.0              31.0       31.0             8.0             9.0             4.0                   8.0             8.0                  16.0  \n",
-       "2            19.0              29.0       21.0             7.0            10.0             2.0                   4.0             5.0                  10.0  \n",
-       "3            19.0              31.0       22.0             4.0            11.0             4.0                   8.0             5.0                  10.0  \n",
-       "4             8.0              34.0       25.0             5.0             8.0             7.0                  17.0             5.0                  13.0  "
+       "   faceOffsWonFor_y  hitsFor_y  takeawaysFor_y  giveawaysFor_y  penaltiesFor_x  penalityMinutesFor_x  penaltiesFor_y  penalityMinutesFor_y  \n",
+       "0              30.0       25.0             6.0             6.0             8.0                  16.0             5.0                  10.0  \n",
+       "1              31.0       31.0             8.0             9.0             4.0                   8.0             8.0                  16.0  \n",
+       "2              29.0       21.0             7.0            10.0             2.0                   4.0             5.0                  10.0  \n",
+       "3              31.0       22.0             4.0            11.0             4.0                   8.0             5.0                  10.0  \n",
+       "4              34.0       25.0             5.0             8.0             7.0                  17.0             5.0                  13.0  "
       ]
      },
-     "execution_count": 231,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6178,7 +6154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6194,7 +6170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6204,7 +6180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6215,7 +6191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -6223,10 +6199,10 @@
      "output_type": "stream",
      "text": [
       "** Logistic Regression model has been trained.\n",
-      "** Training Score: 0.5402439024390244\n",
-      "** Testing Score: 0.537712895377129\n",
-      "** Training LogLoss: 0.6899041663850037\n",
-      "** Testing LogLoss: 0.6903135666986531\n"
+      "** Training Score: 0.848170731707317\n",
+      "** Testing Score: 0.7931873479318735\n",
+      "** Training LogLoss: 0.36953900615759205\n",
+      "** Testing LogLoss: 0.41457484073679185\n"
      ]
     },
     {
